@@ -1,5 +1,5 @@
 #-------------------------------------------------------------------------------
-# Name:        	OSTrICa - Open Source Threat Intelligence Collector 
+# Name:        	OSTrICa - Open Source Threat Intelligence Collector
 # Purpose:		Collection and visualization of Threat Intelligence data
 #
 # Author:      	Roberto Sponchioni - <rsponchioni@yahoo.it> @Ptr32Void
@@ -44,3 +44,6 @@ class Config(object):
     deep_viz_api = 'YOUR_KEY_HERE'
     threat_crowd_limit = True
     threat_crowd_limit_seconds = 10
+    threat_miner_limit = True
+    threat_miner_limit_seconds = 10
+    threat_miner_limit_report = 10
