@@ -38,6 +38,7 @@ body {
 .legend li { float: left; }
 .legend span { border: 1px solid #ccc; float: left; width: 12px; height: 12px; margin: 2px; }
 .legend .threatcrowd { background-color: #ffe033; }
+.legend .threatminer { background-color: #ffe033; }
 .legend .safebrowsing { background-color: #a00000; }
 .legend .spyonweb { background-color: #999966; }
 .legend .websiteinformer { background-color: #00ff00; }
