@@ -102,6 +102,8 @@ ready: function() {
 						$("#info").html("Selected intelligence<br/> belongs to: <b>SafeBrowsing</b>");
 					} else if (node.data('color') == '#ffe033') {
 						$("#info").html("Selected intelligence<br/> belongs to: <b>ThreatCrowd</b>");
+					} else if (node.data('color') == '#66ccff') {
+						$("#info").html("Selected intelligence<br/> belongs to: <b>ThreatMiner</b>");
 					} else {
 						$("#info").html("Not implemented yet.");
 					}
@@ -182,6 +184,7 @@ ready: function() {
 			var spyonweb_intelligence = $('#sow_intel').is(':checked');
 			var safebrowsing_intelligence = $('#sbg_intel').is(':checked');
 			var threatcrowd_intelligence = $('#tc_intel').is(':checked');
+			var threatminer_intelligence = $('#tm_intel').is(':checked');
 			
 			var domains_intelligence = $('#flt_domains').is(':checked');
 			var associated_domains_intelligence = $('#flt_assoc_domains').is(':checked');
@@ -243,6 +246,10 @@ ready: function() {
 				} else if( type === '#ffe033' ){
 				  
 				  if( !threatcrowd_intelligence ){ filter(); }
+				  
+				} else if( type === '#66ccff' ){
+				  
+				  if( !threatminer_intelligence ){ filter(); }
 				  
 				}
 				
@@ -355,6 +362,8 @@ ready: function() {
 					node_type = 'Cymru';
 				} else if (node.data('color') == '#ffe033') {
 					node_type = 'ThreatCrowd';
+				} else if (node.data('color') == '#66ccff') {
+					node_type = 'ThreatMiner';
 				} else {
 					node_type = 'Not implemented yet.';
 				}	
@@ -440,6 +449,7 @@ function hideNode(idx, node_id){
 	<li><span class="spyonweb"></span> SpyOnWeb</li>
 	<li><span class="safebrowsing"></span> SafeBrowsing (Google)</li>
 	<li><span class="threatcrowd"></span> ThreatCrowd</li>
+	<li><span class="threatminer"></span> ThreatMiner</li>
 </ul>
 	</td>
 	<td>
@@ -471,6 +481,7 @@ function hideNode(idx, node_id){
 		<li><input id="sow_intel" type="checkbox" checked></input> SpyOnWeb</li>
 		<li><input id="sbg_intel" type="checkbox" checked></input> SafeBrowsing (Google)</li>
 		<li><input id="tc_intel" type="checkbox" checked></input> ThreatCrowd</li>		
+		<li><input id="tm_intel" type="checkbox" checked></input> ThreatMiner</li>	
 		</ul>
 
 	<br/>
