@@ -1,3 +1,4 @@
+* 03 November 2016 - Added ThreatMiner plugin
 * 26 July 2016 - Added requirements.txt to ease the dependencies installation via "pip install" (Thanks to  PidgeyL)
 * 17 July 2016 - Added ThreatCrowd Plugin and updated visualization module
 * 08 July 2016 - Updated code to make it cross platform (Thanks to sketchymoose and inigma117)
